[tool.poetry]
name = "gsem"
version = "0.2.2"
description = "Command line extension manager for Gnome-Shell"
authors = ["Andrii Kohut <kogut.andriy@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andriykohut/gsem"
repository = "https://github.com/andriykohut/gsem"

keywords = ["gnome-shell", "gnome", "cli", "command-line-tool", "gnome-shell-extension"]
classifiers = ["Topic :: Desktop Environment :: Gnome"]

[tool.poetry.dependencies]
python = "^3.7"
PyGObject = "^3.38.0"

[tool.poetry.dev-dependencies]
black = "^22.12"
flake8 = "^5.0.4"
mypy = "^0.991"
pre-commit = "^2.20.0"
isort = "^5.11.3"

[tool.poetry.scripts]
gsem = "gsem.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
